--- a/Android/scenes/showTo1v1/src/main/res/drawable/show_to1v1_top_toast_card.xml
+++ b/Android/scenes/showTo1v1/src/main/res/drawable/show_to1v1_top_toast_card.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <solid android:color="#E6FFFFFF"/>
+    <solid android:color="#FFFFFF"/>
 </shape>
