Feat/scene/ktv android 3.3.0 (#565)

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_debug_options.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_debug_options.xml
@@ -25,6 +25,30 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvChannelName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="channelName:"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvSDKVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="agora sdk ver: "
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="音频dump"
@@ -97,70 +121,41 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ktv_music_menu_dialog_mv"
+            android:text="私有参数"
             android:textColor="@color/def_text_grey_979" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/switchMV"
+        <EditText
+            android:id="@+id/etParms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:button="@drawable/cb_def_selector" />
+            android:layout_marginStart="20dp"
+            android:text="Input Key"
+            android:textColor="@color/def_text_grey_979"
+            />
 
+        <EditText
+            android:id="@+id/etParmsNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Input Value"
+            android:textColor="@color/def_text_grey_979"
+            />
+
+        <Button
+            android:id="@+id/btSetParams"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:alpha="0.3"
+            android:text="设置"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:text="@string/ktv_music_menu_dialog_tone"
-            android:textColor="#9BA2AB" />
-
-        <ImageButton
-            android:id="@+id/btn_tone_down_dialog_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:background="@null"
-            android:contentDescription="@string/ktv_tone_down"
-            android:padding="6dp"
-            android:src="@drawable/ic_tone_down" />
-
-        <io.agora.scene.widget.CustomVolumeSeekBarView
-            android:id="@+id/changeToneView"
-            android:layout_width="180dp"
-            android:layout_height="28dp"
-            android:layout_marginBottom="3dp"
-            android:clickable="false"
-            android:focusable="false"
-            tools:text="0" />
-
-        <ImageButton
-            android:id="@+id/btn_tone_up_dialog_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:contentDescription="audio dump"
-            android:padding="6dp"
-            android:src="@drawable/ic_tone_up" />
-    </LinearLayout>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
