--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
@@ -52,6 +52,31 @@
         android:layout_marginTop="69dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/bg_round_black"
+        android:src="@mipmap/ic_bel_canto"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iBtnProfile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/ktv_voice_effect"
+        android:textColor="@color/def_text_grey_6c7"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/iBtnEffectVoice"
+        app:layout_constraintStart_toStartOf="@id/iBtnEffectVoice"
+        app:layout_constraintTop_toBottomOf="@id/iBtnEffectVoice" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iBtnProfile"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/bg_round_black"
         android:src="@mipmap/ic_beauty_voice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iBtnMV"
@@ -62,23 +87,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/ktv_voice_effect"
+        android:text="@string/ktv_voice_profile"
         android:textColor="@color/def_text_grey_6c7"
-        app:layout_constraintEnd_toEndOf="@id/iBtnEffectVoice"
-        app:layout_constraintStart_toStartOf="@id/iBtnEffectVoice"
-        app:layout_constraintTop_toBottomOf="@id/iBtnEffectVoice" />
+        app:layout_constraintEnd_toEndOf="@id/iBtnProfile"
+        app:layout_constraintStart_toStartOf="@id/iBtnProfile"
+        app:layout_constraintTop_toBottomOf="@id/iBtnProfile" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/iBtnMV"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginTop="68dp"
         android:background="@drawable/bg_round_black"
         android:src="@mipmap/ic_camera_on"
-        app:layout_constraintBottom_toBottomOf="@id/iBtnEffectVoice"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iBtnEffectVoice"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/iBtnProfile"
+        app:layout_constraintTop_toTopOf="@+id/iBtnProfile" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
