--- a/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
@@ -5,14 +5,14 @@
     android:id="@+id/superLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_app_def_dark"
+    android:background="@mipmap/ktv_room_bg"
     tools:context=".live.RoomLivingActivity">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/bg_room_living" />
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@mipmap/ktv_room_bg" />-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvRoomName"
@@ -86,34 +86,36 @@
         app:layout_constraintEnd_toStartOf="@id/tvNetStatus"
         app:layout_constraintTop_toTopOf="@id/tvNetStatus" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/bgRoom"
-        android:layout_width="match_parent"
-        android:layout_height="232dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="24dp"
-        android:minWidth="345dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:id="@+id/bgRoom"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="232dp"-->
+<!--        android:layout_marginHorizontal="15dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:minWidth="345dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />-->
 
     <io.agora.scene.ktv.widget.lrcView.LrcControlView
         android:id="@+id/lrcControlView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="280dp"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toTopOf="@id/rvUserMember"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />
+        app:layout_constraintTop_toBottomOf="@id/tvRoomMCount" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUserMember"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="12dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/lrcControlView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +130,7 @@
         android:layout_marginBottom="20dp"
         android:button="@null"
         android:checked="true"
-        android:drawableStart="@drawable/bg_cb_mic_status"
+        android:background="@drawable/ktv_cb_mic_status"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -140,7 +142,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="20dp"
         android:button="@null"
-        android:drawableStart="@drawable/bg_cb_video_status"
+        android:background="@drawable/ktv_cb_camera_status"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cbMic" />
@@ -151,9 +153,8 @@
         android:layout_height="38dp"
         android:layout_marginStart="5dp"
         android:layout_marginBottom="20dp"
-        android:background="@null"
         android:padding="5dp"
-        android:src="@mipmap/ic_more"
+        android:background="@mipmap/ktv_ic_vocal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cbVideo"
         tools:ignore="SpeakableTextPresentCheck" />
