--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -5,8 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@mipmap/ktv_mv_default"
-    tools:layout_height="230dp"
+    tools:layout_height="280dp"
     tools:theme="@style/Theme.MaterialComponents.Light">
+
+    <LinearLayout
+        android:id="@+id/btnVocalHighlight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ktv_bg_highlight"
+        android:paddingStart="10dp"
+        android:paddingEnd="3dp"
+        android:paddingVertical="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/scoringView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tvVocalHighlight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="突出人声"
+            android:textColor="@color/white_60_percent"/>
+
+        <ImageView
+            android:id="@+id/ivVocalHighlight"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="5dp"
+            android:background="@mipmap/ktv_highlight_head_bg"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/downloadLrcFailedView"
@@ -41,7 +69,7 @@
         android:id="@+id/scoringView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="50dp"
         android:background="#02FFFFFF"
         app:initialScore="0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +116,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="15dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="2dp"
         android:insetRight="0dp"
@@ -114,7 +142,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -140,7 +168,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -253,7 +281,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:background="@null"
         android:checkable="true"
         android:insetLeft="0dp"
