--- a/Android/scenes/ktv/src/main/res/values/arrays.xml
+++ b/Android/scenes/ktv/src/main/res/values/arrays.xml
@@ -35,4 +35,18 @@
         <item>流行</item>
         <item>RnB</item>
     </string-array>
+
+    <string-array name="ktv_aec">
+        <item>低</item>
+        <item>中</item>
+        <item>高</item>
+    </string-array>
+
+    <string-array name="ktv_aiaec_strength">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
