--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -78,6 +78,7 @@
     <color name="white_20_percent">#33FFFFFF</color>
     <color name="white_30_percent">#4DFFFFFF</color>
     <color name="white_35_percent">#59FFFFFF</color>
+    <color name="white_50_percent">#80FFFFFF</color>
     <color name="white_60_percent">#99FFFFFF</color>
     <color name="white_70_percent">#B3FFFFFF</color>
     <color name="white_80_percent">#CCFFFFFF</color>
