--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_audio_setting.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_audio_setting.xml
@@ -71,6 +71,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtAINSArrow"
             style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
             android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
             app:layout_constraintBottom_toBottomOf="@+id/mtAINS"
             app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +110,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtAECArrow"
             style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
             android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
             app:layout_constraintBottom_toBottomOf="@+id/mtAEC"
             app:layout_constraintEnd_toEndOf="parent"
@@ -145,6 +149,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtAGCArrow"
             style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
             android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/mtAGC"
@@ -159,34 +165,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mtAGC" />
 
-<!--        <androidx.appcompat.widget.AppCompatImageView-->
-<!--            android:id="@+id/ivVoiceChanger"-->
-<!--            android:layout_width="20dp"-->
-<!--            android:layout_height="20dp"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:src="@drawable/voice_icon_room_setting_voice_changer"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/mtVoiceChanger"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/mtVoiceChanger"/>-->
+        <!--  In-Ear Monitor  -->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivInEarTitle"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/voice_icon_room_setting_ear_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvInEar"
+            app:layout_constraintBottom_toBottomOf="@+id/tvInEar"/>
 
-<!--        <com.google.android.material.textview.MaterialTextView-->
-<!--            android:id="@+id/mtVoiceChanger"-->
-<!--            style="@style/voice_bottom_sheet_text_style"-->
-<!--            android:layout_marginTop="1dp"-->
-<!--            android:layout_marginBottom="15dp"-->
-<!--            android:layout_marginStart="52dp"-->
-<!--            android:text="# 变声"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/mtAGC" />-->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvInEar"
+            style="@style/voice_bottom_sheet_text_style"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="52dp"
+            android:text="@string/voice_chatroom_ear_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mtAGC" />
 
-<!--        <com.google.android.material.textview.MaterialTextView-->
-<!--            android:id="@+id/mtVoiceChangerArrow"-->
-<!--            style="@style/voice_bottom_sheet_right_text_style"-->
-<!--            android:drawableEnd="@drawable/voice_icon_arrow_right_grey"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/mtVoiceChanger"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/mtVoiceChanger"-->
-<!--            tools:text="@string/voice_chatroom_off" />-->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvInEarArrow"
+            style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
+            android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tvInEar"
+            app:layout_constraintTop_toTopOf="@+id/tvInEar"
+            tools:text="@string/voice_chatroom_off" />
 
         <!--  Bot Settings Title  -->
         <View
@@ -206,7 +215,7 @@
             android:drawableEnd="@drawable/voice_icon_room_setting_new_tag"
             android:drawablePadding="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mtAGC" />
+            app:layout_constraintTop_toBottomOf="@+id/tvInEar" />
 
         <com.google.android.material.textview.MaterialTextView
             android:layout_height="wrap_content"
@@ -281,7 +290,6 @@
             android:text="@string/voice_chatroom_bot_volume"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mtAgoraBot" />
-
         <androidx.appcompat.widget.AppCompatSeekBar
             android:id="@+id/pbAgoraBotVolume"
             style="@style/voice_bottom_sheet_progress"
@@ -356,6 +364,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtBestSoundEffectArrow"
             style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
             android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
             app:layout_constraintBottom_toBottomOf="@+id/mtBestSoundEffect"
             app:layout_constraintEnd_toEndOf="parent"
@@ -371,32 +381,66 @@
             app:layout_constraintTop_toBottomOf="@+id/mtBestSoundEffect" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivSpatialAudio"
+            android:id="@+id/ivBGM"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="20dp"
-            android:src="@drawable/voice_icon_room_setting_spatial_audio"
-            app:layout_constraintBottom_toBottomOf="@+id/mtSpatialAudio"
+            android:src="@drawable/voice_icon_room_setting_bgm"
+            app:layout_constraintBottom_toBottomOf="@+id/tvBGM"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/mtSpatialAudio" />
+            app:layout_constraintTop_toTopOf="@+id/tvBGM" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtSpatialAudio"
+            android:id="@+id/tvBGM"
             style="@style/voice_bottom_sheet_text_style"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="15dp"
             android:layout_marginStart="52dp"
-            android:text="@string/voice_chatroom_spatial_audio"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/voice_chatroom_bgm"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mtBestSoundEffect" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/mtSpatialAudioArrow"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvBGMArrow"
             style="@style/voice_bottom_sheet_right_text_style"
+            android:layout_width="200dp"
+            android:gravity="right"
             android:drawableEnd="@drawable/voice_icon_arrow_right_grey"
-            app:layout_constraintBottom_toBottomOf="@+id/mtSpatialAudio"
+            app:layout_constraintBottom_toBottomOf="@+id/tvBGM"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/mtSpatialAudio" />
+            app:layout_constraintTop_toTopOf="@+id/tvBGM" />
+
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/voice_bottom_sheet_divider_style"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvBGM" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:paddingLeft="8dp"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/voice_sp_12"
+            android:textColor="@color/def_text_grey_6c7"
+            android:text="声网凤鸣AI引擎提供支持"
+            app:layout_constraintTop_toBottomOf="@+id/tvBGM"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/voice_icon_engine_logo"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLogo"
+            app:layout_constraintEnd_toStartOf="@+id/tvLogo"
+            app:layout_constraintTop_toTopOf="@+id/tvLogo"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
