--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
@@ -11,11 +11,11 @@
         android:id="@+id/downloadLrcFailedView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:gravity="center"
         android:text="@string/cantata_lrc_failed"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,12 +37,11 @@
     <io.agora.karaoke_view.v11.LyricsView
         android:id="@+id/lyricsView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="120dp"
         android:background="#00000000"
-        android:paddingStart="10dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="4dp"
+        android:layout_marginTop="36dp"
         app:currentLineHighlightedTextColor="@color/pink_b4"
         app:currentLineTextColor="@color/white"
         app:currentLineTextSize="16sp"
@@ -54,8 +53,7 @@
         app:startOfVerseIndicatorPaddingTop="6dp"
         app:startOfVerseIndicatorRadius="4dp"
         app:textGravity="center"
-        app:textSize="14sp"
-        tools:layout_editor_absoluteX="-36dp" />
+        app:textSize="14sp" />
 
     <View
         android:id="@+id/bgd_control_layout_lrc"
@@ -289,4 +287,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="bgd_control_layout_lrc,switchOriginal,ivMusicMenu,ivMusicStart,ivChangeSong,ivSkipPostlude,ivSkipPrelude" />
+
+    <io.agora.scene.cantata.ui.widget.chorusView.ChorusMicView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/ivJoinChorusBtn"
+        app:layout_constraintTop_toBottomOf="@+id/lyricsView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
