--- a/Android/scenes/cantata/src/main/res/layout/cantata_dialog_singing_user.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_dialog_singing_user.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
     android:background="@drawable/cantata_bg_full_blue_top_20"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:paddingTop="12dp"
         android:text="@string/cantata_singing_user"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent" />
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recyclerSinging"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="1"
-       tools:listitem="@layout/cantata_item_singing_user"
-       android:orientation="vertical"/>
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="20dp" />
-</LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerSinging"
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="20dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/cantata_item_singing_user" />
+</androidx.constraintlayout.widget.ConstraintLayout>
