add rank list logic

--- a/Android/scenes/cantata/src/main/res/layout/cantata_item_singing_user.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_item_singing_user.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:background="@color/black_30_percent"
     android:paddingHorizontal="16dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivChorusNum"
+        android:id="@+id/ivSingerNum"
         android:layout_width="36dp"
         android:layout_height="wrap_content"
         android:src="@drawable/cantata_rank_one"
@@ -18,23 +17,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvChorusNum"
+        android:id="@+id/tvSingerNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="@id/ivChorusNum"
-        app:layout_constraintEnd_toEndOf="@id/ivChorusNum"
-        app:layout_constraintStart_toStartOf="@id/ivChorusNum"
-        app:layout_constraintTop_toTopOf="@id/ivChorusNum"
+        app:layout_constraintBottom_toBottomOf="@id/ivSingerNum"
+        app:layout_constraintEnd_toEndOf="@id/ivSingerNum"
+        app:layout_constraintStart_toStartOf="@id/ivSingerNum"
+        app:layout_constraintTop_toTopOf="@id/ivSingerNum"
         tools:text="1" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ivUserAvatar"
+        android:id="@+id/ivSingerAvatar"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginVertical="8dp"
         app:shapeAppearance="@style/ui_widget_roundStyle"
-        app:layout_constraintStart_toEndOf="@id/ivChorusNum"
+        app:layout_constraintStart_toEndOf="@id/ivSingerNum"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp"
@@ -48,23 +48,25 @@
         android:orientation="horizontal"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvUserName"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSingerName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/ivUserAvatar"
+        app:layout_constraintStart_toEndOf="@id/ivSingerAvatar"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
         android:textColor="@color/white"
         android:textSize="15sp"
         tools:text="xuanxuan"
+        android:lines="1"
         android:drawablePadding="4dp"
         android:drawableStart="@drawable/cantata_main_singer_ic"
         app:layout_constraintBottom_toTopOf="@+id/horizontal50"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvChorusScore"
+        android:id="@+id/tvSingerScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/ivUserAvatar"
+        app:layout_constraintStart_toEndOf="@id/ivSingerAvatar"
         android:layout_marginStart="8dp"
         android:textColor="@color/white_50_percent"
         android:textSize="12sp"
