--- a/Android/scenes/cantata/src/main/res/layout/cantata_dialog_singing_user.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_dialog_singing_user.xml
@@ -24,11 +24,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSinging"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="420dp"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/cantata_item_singing_user" />
 </androidx.constraintlayout.widget.ConstraintLayout>
