--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_game_rank_list_view.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_game_rank_list_view.xml
@@ -110,6 +110,7 @@
         android:id="@+id/tvNextSongCountdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="下一首 10s"
