--- a/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_layout_lrc_active.xml
@@ -41,7 +41,7 @@
         android:background="#00000000"
         android:paddingHorizontal="10dp"
         android:paddingVertical="4dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="32dp"
         app:enableDragging="true"
         app:currentLineHighlightedTextColor="@color/pink_b4"
         app:currentLineTextColor="@color/white"
@@ -293,7 +293,7 @@
         android:id="@+id/chorusMicView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/lyricsView"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintBottom_toTopOf="@+id/ivJoinChorusBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
